--- a/Layouts/Level 3.xml
+++ b/Layouts/Level 3.xml
@@ -54,6 +54,9 @@
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
+                    <instance-variables>
+                        <Melee>false</Melee>
+                    </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="BoundToLayout">
                             <properties>
